// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Render empty 1`] = `
<button
  className="py-2 px-4 rounded bg-blue-500 hover:bg-blue-700 text-white"
  disabled={false}
  type="submit"
/>
`;

exports[`<Button> With className 1`] = `
<button
  className="some-class py-2 px-4 rounded bg-blue-500 hover:bg-blue-700 text-white"
  disabled={false}
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> With text 1`] = `
<button
  className="py-2 px-4 rounded bg-blue-500 hover:bg-blue-700 text-white"
  disabled={false}
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> With type 1`] = `
<button
  className="py-2 px-4 rounded bg-blue-500 hover:bg-blue-700 text-white"
  disabled={false}
  type="button"
>
  Some text
</button>
`;

exports[`<Button> appearance=danger 1`] = `
<button
  className="py-2 px-4 rounded bg-red-500 hover:bg-red-700 text-white"
  disabled={false}
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> appearance=light 1`] = `
<button
  className="py-2 px-4 rounded bg-white hover:bg-gray-100 text-gray-800"
  disabled={false}
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> block 1`] = `
<button
  className="py-2 px-4 rounded btn-block bg-blue-500 hover:bg-blue-700 text-white"
  disabled={false}
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> lg 1`] = `
<button
  className="py-2 px-4 rounded text-lg bg-blue-500 hover:bg-blue-700 text-white"
  disabled={false}
  type="submit"
>
  Some text
</button>
`;
